fixed font visibility issues with Tailwind

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,12 @@
 /* globals.css */
 @import "tailwindcss";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Titan+One&display=swap');
 
 html, body {
   padding: 0;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif !important;
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
